...
                        )
                    },
                    contentPadding = PaddingValues(start = 12.dp, end = 32.dp)
                )
                HorizontalDivider(modifier = Modifier.padding(vertical = 4.dp))
                DropdownMenuItem(
                    text = { Text("Keluar", color = MaterialTheme.colorScheme.error) },
                    onClick = { 
                        expanded = false
                        onLogout()
                    },
                    leadingIcon = {
                        Icon(
...
            }
        }

        item {
            Column(verticalArrangement = Arrangement.spacedBy(16.dp)) {
                PaddingWrapper {
                    SectionHeader(title = "Kerja Cepat")
                }
                LazyRow(
                    contentPadding = PaddingValues(horizontal = 24.dp),
                    horizontalArrangement = Arrangement.spacedBy(16.dp)
                ) {
                    item {
...
